# Ai_challenge

./: README.md  README_requerimientos.txt  game.py
Controlador/: Controlador.ino
ros-pacman_ai/: CMakeLists.txt  package.xml
ros-pacman_ce/: CMakeLists.txt  package.xml
ros-pacman_ce/scripts/: controlExternoRe.py
ros-pacman_multi/: CMakeLists.txt  package.xml
ros-pacman_multi/scripts/: controlExternoMulti.py
ros_pacman_sol/: CMakeLists.txt  package.xml
ros_pacman_sol/scripts/: controlExternoAI.py  controlExternoRe.py
