<?xml version="1.0"?>
<package format="2">
  <name>ros-pacman_multi</name>
  <version>0.0.0</version>
  <description>The ros-pacman_multi package</description>

  <maintainer email="ja.duarte10@uniandes.edu.co">John Alejandro Duarte Carrasco</maintainer>
  <maintainer email="df.martinez@uniandes.edu.co">Diego Felipe Martinez Valencia</maintainer>
  <maintainer email="se.cardenas@uniandes.edu.co">Sergio Eduardo Cardenas Landazabal</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
